--- a/app/src/main/res/layout/ui_login.xml
+++ b/app/src/main/res/layout/ui_login.xml
@@ -10,6 +10,7 @@
         android:id="@+id/imageView"
         android:layout_width="57dp"
         android:layout_height="59dp"
+        android:contentDescription="@string/Image"
         android:src="@drawable/tcalogo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -18,10 +19,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/company_name"
-        android:textStyle="bold"
         android:textColor="@color/heading"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
