--- a/app/src/main/res/layout/ui1_login.xml
+++ b/app/src/main/res/layout/ui1_login.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".Login">
+    tools:context=".Backend1_Login">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:contentDescription="@string/Image"
-        android:src="@drawable/tcalogo"
+        android:src="@drawable/icon_logo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,8 +46,10 @@
         android:layout_margin="10dp"
         android:drawableStart="@drawable/icon_person"
         android:drawablePadding="4dp"
+        android:textColor="@color/black"
         android:background="@drawable/shape_email_pass_shaper"
         android:padding="10dp"
+        android:textColorHint="@color/hint"
         android:autofillHints=""
         android:hint="@string/enter_email"
         android:inputType="textEmailAddress"
@@ -65,6 +67,8 @@
         android:layout_height="wrap_content"
         android:hint="@string/enter_password"
         android:drawableStart="@drawable/icon_lock"
+        android:textColor="@color/black"
+        android:textColorHint="@color/hint"
         android:drawablePadding="4dp"
         app:layout_constraintEnd_toEndOf="@+id/editText"
         app:layout_constraintStart_toStartOf="@+id/editText"
