--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="heading">#222121</color>
     <color name="status_bar">#3F51B5</color>
     <color name="background">#F1D8D8</color>
+    <color name="hint">#8B7F7F</color>
 </resources>
