--- a/app/src/main/res/layout/ui3_add_job.xml
+++ b/app/src/main/res/layout/ui3_add_job.xml
@@ -78,7 +78,7 @@
                 android:layout_marginEnd="10dp"
                 android:autofillHints=""
                 android:background="@drawable/shape_additional_edit_text_shaper"
-                android:drawableStart="@drawable/icon_company"
+                android:drawableStart="@drawable/icon_sample1"
                 android:drawablePadding="10dp"
                 android:hint="@string/add_job_12"
                 android:inputType="text"
