some changes in settings page

--- a/app/src/main/res/layout/ui7_settings.xml
+++ b/app/src/main/res/layout/ui7_settings.xml
@@ -340,7 +340,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TCA"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textColor="@color/heading"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView4"
@@ -351,10 +351,10 @@
                 android:id="@+id/textView16"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="10dp"
                 android:text="@string/settings_info"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -369,7 +369,7 @@
                 android:layout_marginTop="20dp"
                 android:text="Logins"
                 android:textColor="@color/black"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/imageView4"
                 app:layout_constraintTop_toBottomOf="@+id/textView16">
