Completed the job posted card holder

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="hint">#8B7F7F</color>
     <color name="boundary1">#B7777979</color>
     <color name= "button_1">#2A91FF</color>
+    <color name = "red">#FF0000</color>
 </resources>
