--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="boundary1">#B7777979</color>
     <color name= "button_1">#2A91FF</color>
     <color name = "red">#FF0000</color>
+    <color name="blue">#03A9F4</color>
 </resources>
