--- a/app/src/main/res/layout/ui7_settings.xml
+++ b/app/src/main/res/layout/ui7_settings.xml
@@ -34,7 +34,7 @@
 
     </TextView>
 
-    <EditText
+    <TextView
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -88,7 +88,7 @@
 
                     </ImageView>
 
-                    <EditText
+                    <TextView
                         android:id="@+id/name"
                         android:layout_width="200dp"
                         android:padding="4dp"
@@ -96,7 +96,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:hint="Name" >
-                    </EditText>
+                    </TextView>
 
 
                 </FrameLayout>
@@ -114,7 +114,7 @@
 
                     </ImageView>
 
-                    <EditText
+                    <TextView
                         android:id="@+id/phone_number"
                         android:layout_width="200dp"
                         android:padding="4dp"
@@ -138,7 +138,7 @@
 
                     </ImageView>
 
-                    <EditText
+                    <TextView
                         android:id="@+id/location"
                         android:padding="4dp"
                         android:layout_width="200dp"
@@ -147,7 +147,7 @@
                         android:layout_gravity="center"
                         android:hint="Location">
 
-                    </EditText>
+                    </TextView>
 
 
                 </FrameLayout>
@@ -165,7 +165,7 @@
 
                     </ImageView>
 
-                    <EditText
+                    <TextView
                         android:id="@+id/status"
                         android:layout_width="200dp"
                         android:padding="4dp"
@@ -174,7 +174,7 @@
                         android:layout_gravity="center"
                         android:hint="Status">
 
-                    </EditText>
+                    </TextView>
 
 
                 </FrameLayout>
