--- a/app/src/main/res/layout/ui8_add_document.xml
+++ b/app/src/main/res/layout/ui8_add_document.xml
@@ -57,7 +57,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/document_back" />
 
-    <EditText
+    <TextView
         android:id="@+id/document_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
