--- a/app/src/main/res/layout/card6_job_applicants.xml
+++ b/app/src/main/res/layout/card6_job_applicants.xml
@@ -1,6 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:background="@drawable/shape_card_shaper"
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/card6_image"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/icon_person"
+        android:contentDescription="@string/profile"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:background="@drawable/shape_image_view_shaper"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="@string/profile"
+        android:textColor="@color/black"
+        android:layout_marginStart="10dp"
+        android:id="@+id/card6_name"
+        app:layout_constraintBottom_toBottomOf="@+id/card6_image"
+        app:layout_constraintStart_toEndOf="@+id/card6_image"
+        app:layout_constraintTop_toTopOf="@+id/card6_image" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/card6_2"
+        android:textColor="@color/blue"
+        android:id="@+id/card6_view_profile"
+        android:layout_marginEnd="10dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/card6_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/card6_name" />
+
+    <TextView
+        android:id="@+id/textView26"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="@string/card6_3"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@+id/card6_image"
+        app:layout_constraintTop_toBottomOf="@+id/card6_image" />
+
+    <Switch
+        android:id="@+id/card6_Switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/textView26"
+        app:layout_constraintStart_toEndOf="@+id/textView26"
+        android:layout_marginStart="5dp"
+        app:layout_constraintTop_toTopOf="@+id/textView26"
+        tools:ignore="UseSwitchCompatOrMaterialXml">
+    </Switch>
+
+    <TextView
+        android:id="@+id/card6_accept"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:text="@string/card6_4"
+        android:textColor="@color/green"
+        android:textStyle="bold"
+        app:drawableStartCompat="@drawable/icon_accept"
+        app:layout_constraintEnd_toStartOf="@+id/card6_reject"
+        app:layout_constraintStart_toEndOf="@+id/card6_Switch"
+        app:layout_constraintTop_toBottomOf="@+id/card6_Switch">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/card6_reject"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:text="@string/card6_5"
+        android:textColor="@color/red"
+        android:textStyle="bold"
+        app:drawableStartCompat="@drawable/icon_reject"
+        app:layout_constraintBottom_toBottomOf="@+id/card6_accept"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/card6_accept">
+
+    </TextView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/card6_6"
+        android:layout_marginTop="10dp"
+        android:id="@+id/card6_reset"
+        android:textColor="@color/boundary1"
+        app:layout_constraintStart_toStartOf="@+id/textView26"
+        app:layout_constraintTop_toBottomOf="@+id/textView26" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
