--- a/app/src/main/res/layout/ui11_message_window.xml
+++ b/app/src/main/res/layout/ui11_message_window.xml
@@ -47,7 +47,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/ui11_input"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4">
@@ -64,6 +64,32 @@
         app:layout_constraintTop_toTopOf="parent">
 
     </ProgressBar>
+
+    <EditText
+        android:id="@+id/ui11_input"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:background="@drawable/shape_email_pass_shaper"
+        android:hint="Write a message here"
+        android:layout_marginBottom="10dp"
+        android:padding="7dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </EditText>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:src="@drawable/icon_send"
+        android:id="@+id/ui11_send"
+        app:layout_constraintBottom_toBottomOf="@+id/ui11_input"
+        app:layout_constraintEnd_toEndOf="@+id/ui11_input"
+        app:layout_constraintTop_toTopOf="@+id/ui11_input"
+        android:contentDescription="@string/profile" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
