--- a/app/src/main/res/layout/card7_chat_message.xml
+++ b/app/src/main/res/layout/card7_chat_message.xml
@@ -1,7 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@drawable/shape_card_shaper"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/shape_image_view_shaper"
+        android:src="@drawable/icon_person"
+        android:layout_marginTop="10dp"
+        android:id="@+id/card7_image"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/profile">
+
+    </ImageView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/card7_2"
+        android:layout_marginTop="10dp"
+        android:id="@+id/card7_status"
+        android:layout_marginEnd="10dp"
+        android:textColor="@color/boundary1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/card7_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/profile"
+        android:layout_marginStart="10dp"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/card7_image"
+        app:layout_constraintStart_toEndOf="@+id/card7_image"
+        app:layout_constraintTop_toTopOf="@+id/card7_image" />
+
+    <TextView
+        android:layout_width="61dp"
+        android:layout_height="21dp"
+        android:text="@string/card7_4"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@+id/card7_image"
+        app:layout_constraintTop_toBottomOf="@+id/card7_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
