--- a/app/src/main/res/layout/ui1_login.xml
+++ b/app/src/main/res/layout/ui1_login.xml
@@ -39,8 +39,8 @@
 
     </TextView>
 
-    <TextView
-        android:id="@+id/editText"
+    <EditText
+        android:id="@+id/ui1_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -53,15 +53,15 @@
         android:autofillHints=""
         android:hint="@string/enter_email"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/ui1_login_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
-    </TextView>
+    </EditText>
 
-    <TextView
-        android:id="@+id/editText2"
+    <EditText
+        android:id="@+id/ui1_password"
         android:layout_width="0dp"
         android:background="@drawable/shape_email_pass_shaper"
         android:layout_height="wrap_content"
@@ -70,19 +70,21 @@
         android:textColor="@color/black"
         android:textColorHint="@color/hint"
         android:drawablePadding="4dp"
-        app:layout_constraintEnd_toEndOf="@+id/editText"
-        app:layout_constraintStart_toStartOf="@+id/editText"
+        app:layout_constraintEnd_toEndOf="@+id/ui1_email"
+        app:layout_constraintStart_toStartOf="@+id/ui1_email"
         android:padding="10dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintTop_toBottomOf="@+id/ui1_email"
         android:inputType="textPassword"
         android:autofillHints="password" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/ui1_login_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/alternate_login"
+        android:text="@string/login_signup"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:textColor="@color/heading"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,9 +99,9 @@
         android:layout_height="40dp"
         android:contentDescription="@string/google"
         android:src="@drawable/icon_google"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
+        app:layout_constraintBottom_toTopOf="@+id/ui1_skip"
+        app:layout_constraintStart_toStartOf="@+id/ui1_login_signup"
+        app:layout_constraintTop_toBottomOf="@+id/ui1_login_signup">
 
     </ImageView>
 
@@ -109,14 +111,14 @@
         android:layout_height="40dp"
         android:contentDescription="@string/facebook"
         android:src="@drawable/icon_facebook"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
+        app:layout_constraintBottom_toTopOf="@+id/ui1_skip"
+        app:layout_constraintEnd_toEndOf="@+id/ui1_login_signup"
+        app:layout_constraintTop_toBottomOf="@+id/ui1_login_signup">
 
     </ImageView>
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/ui1_skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/message_1"
@@ -124,7 +126,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
+        app:layout_constraintTop_toBottomOf="@+id/ui1_login_signup">
+    </TextView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/ui1_1"
+        android:textColor="@color/black"
+        android:id="@+id/ui1_forgot_password"
+        android:textSize="14sp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="@+id/ui1_password"
+        app:layout_constraintTop_toBottomOf="@+id/ui1_password">
 
     </TextView>
 
