--- a/app/src/main/res/layout/ui8_add_document.xml
+++ b/app/src/main/res/layout/ui8_add_document.xml
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <TextView
-        android:id="@+id/textView24"
+        android:id="@+id/ui1_login_signup4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
