--- a/app/src/main/res/layout/ui5_profile.xml
+++ b/app/src/main/res/layout/ui5_profile.xml
@@ -124,6 +124,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
+                android:id="@+id/navbar_icon_profile"
                 android:layout_gravity="top|center"
                 android:contentDescription="@string/home"
                 android:src="@drawable/icon_person" />
@@ -132,6 +133,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
+                android:id="@+id/navbar_text_profile"
                 android:text="@string/profile"
                 android:textColor="@color/black">
 
