All Screens Connected

--- a/app/src/main/res/layout/ui3_add_job.xml
+++ b/app/src/main/res/layout/ui3_add_job.xml
@@ -9,7 +9,7 @@
     tools:ignore="ExtraText">
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/ui3_Back"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
@@ -28,10 +28,10 @@
         android:textColor="@color/heading"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+        app:layout_constraintBottom_toBottomOf="@+id/ui3_Back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView4">
+        app:layout_constraintTop_toTopOf="@+id/ui3_Back">
 
     </TextView>
 
@@ -50,7 +50,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="10dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toEndOf="@+id/ui3_Back"
         app:layout_constraintTop_toBottomOf="@+id/textView4">
 
         <androidx.constraintlayout.widget.ConstraintLayout
