--- a/app/src/main/res/layout/ui8_add_document.xml
+++ b/app/src/main/res/layout/ui8_add_document.xml
@@ -8,7 +8,7 @@
     tools:context=".Backend8_AddDocument">
 
     <ImageView
-        android:id="@+id/document_back"
+        android:id="@+id/ui8_Back"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
@@ -27,10 +27,10 @@
         android:textColor="@color/heading"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/document_back"
+        app:layout_constraintBottom_toBottomOf="@+id/ui8_Back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/document_back">
+        app:layout_constraintTop_toTopOf="@+id/ui8_Back">
 
     </TextView>
 
@@ -45,19 +45,18 @@
         app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <TextView
-        android:id="@+id/ui1_login_signup4"
+        android:id="@+id/textView24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
-
         android:text="@string/document_2"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/document_back" />
+        app:layout_constraintTop_toBottomOf="@+id/ui8_Back" />
 
-    <TextView
+    <EditText
         android:id="@+id/document_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -70,7 +69,8 @@
         app:layout_constraintStart_toStartOf="@+id/textView24"
         app:layout_constraintTop_toBottomOf="@+id/textView24"
         android:autofillHints=""
-        android:inputType="textLongMessage"/>
+        android:inputType="textLongMessage"
+        tools:ignore="LabelFor" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="wrap_content"
